--- a/projects/ay_24-25.yml
+++ b/projects/ay_24-25.yml
@@ -17,7 +17,7 @@
   semester:
   - name: 'See more'
     url: yucatan/index.qmd
-- title: "Mapping Landscape Configuration in the Orinoquía, Colombia: The potential for land change in a post-conflict era." 
+- title: "Mapping Landscape Configuration in the Orinoquía, Colombia: The potential for land change in a post-conflict era" 
   description: "The project examines how alternating periods of war and peace directly effect landscapes, through shifts in natural resource availability, the opening of new frontiers, and access to diverse markets."
   university: Rutgers University, Universidad Nacional (Bogotá Colombia)
   number: Colombia
